chandeliers-lus/tests/compile_fail/ui/syn/kw.stderr
error: expected identifier, found keyword reserved by Rust
 --> tests/compile_fail/ui/syn/kw.rs:3:11
  |
3 |     const crate : int = 0;
  |           ^^^^^

error: expected identifier, found keyword reserved by Rust
 --> tests/compile_fail/ui/syn/kw.rs:7:11
  |
7 |     const self : int = 0;
  |           ^^^^

error: expected identifier, found keyword reserved by Rust
  --> tests/compile_fail/ui/syn/kw.rs:11:11
   |
11 |     const Self : int = 0;
   |           ^^^^

error: expected identifier, found keyword reserved by Rust
  --> tests/compile_fail/ui/syn/kw.rs:15:10
   |
15 |     node super() returns ();
   |          ^^^^^

error: expected identifier, found keyword reserved by Rust
  --> tests/compile_fail/ui/syn/kw.rs:20:10
   |
20 |     node move() returns ();
   |          ^^^^

error: expected identifier, found keyword reserved by Rust
  --> tests/compile_fail/ui/syn/kw.rs:25:10
   |
25 |     node static() returns ();
   |          ^^^^^^
